fix resolution on small screens

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -6910,7 +6910,7 @@ a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
 }
 
 .section_container .intro {
-  height: 53%;
+  height: 57%;
   width: 100%;
   position: relative;
 }
@@ -15459,7 +15459,7 @@ input[type=number]::-webkit-inner-spin-button {
         bottom: 150px;
     }
     .section_container{
-        height: 795px;
+        height: 890px;
     }
     .section_container .intro_content p {
         margin-bottom: 40px;
